Fix: placeholder text overlapping user input

--- a/styles.css
+++ b/styles.css
@@ -178,11 +178,15 @@ select {
     justify-content: center;
     padding: 1rem 2rem;
     background: var(--secondary-clr-95);
-    box-shadow: 0 2px 5px hsl(0, 10%, 87%);
+    box-shadow: 0 2px 10px hsl(0, 10%, 87%);
 }
 
 .login-wrapper {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 2rem;
     padding: 0rem 1rem;
     background: transparent;
     transition: background 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
@@ -248,8 +252,15 @@ button {
     left: 5px;
 }
 
-.input-container input:not(:placeholder-shown) {
-    background: blue;
+.input-container > label:has(+ input:not(:placeholder-shown)) {
+    color: hsla(191, 20%, 5%, 0.5);
+    top: 0.5rem;
+    left: 5px;
+}
+
+
+.input-container > label:has(+ input:invalid) {
+    color: var(--accent-clr-60);
 }
 
 input {
@@ -258,11 +269,12 @@ input {
     background: var(--accent-clr-98);
     padding: 0.2rem 0.5rem;
     border-radius: 0.5rem;
+    box-shadow: 0 0 3px var(--accent-clr-bdr);
 }
 
 input:hover,
 input:focus {
-    box-shadow: inset 0 0 2px var(--accent-clr-60);
+    box-shadow: inset 0 0 3px var(--accent-clr-60);
     outline: 1px solid var(--accent-clr-bdr);
 }
 
